// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package Debugger.SbCommandInterpreterRpc;

import "Common.proto";

service SbCommandInterpreterRpcService {
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
  }
  rpc HandleCommand(HandleCommandRequest) returns (HandleCommandResponse) {
  }
  rpc SourceInitFileInHomeDirectory(SourceInitFileInHomeDirectoryRequest)
    returns (SourceInitFileInHomeDirectoryResponse) {
  }
}

message DeleteRequest {
  Common.GrpcSbCommandInterpreter interpreter = 1;
}

message DeleteResponse {
}

message HandleCommandRequest {
  Common.GrpcSbCommandInterpreter interpreter = 1;
  string command = 2;
}

message HandleCommandResponse {
  Common.ReturnStatus return_status = 1;
  Common.GrpcSbCommandReturnObject return_object = 2;
}

message SourceInitFileInHomeDirectoryRequest {
  Common.GrpcSbCommandInterpreter interpreter = 1;
}

message SourceInitFileInHomeDirectoryResponse {
}
