// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package Debugger.SbSymbolRpc;

import "Common.proto";

service SbSymbolRpcService {
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
  }
  rpc GetStartAddress(GetStartAddressRequest)
      returns (GetStartAddressResponse) {
  }
  rpc GetEndAddress(GetEndAddressRequest) returns (GetEndAddressResponse) {
  }
  rpc GetName(GetNameRequest) returns (GetNameResponse) {
  }
}

message DeleteRequest {
  Common.GrpcSbSymbol symbol = 1;
}

message DeleteResponse {
}

message GetStartAddressRequest {
  Common.GrpcSbSymbol symbol = 1;
}

message GetStartAddressResponse {
  Common.GrpcSbAddress address = 1;
}

message GetEndAddressRequest {
  Common.GrpcSbSymbol symbol = 1;
}

message GetEndAddressResponse {
  Common.GrpcSbAddress address = 1;
}

message GetNameRequest {
  Common.GrpcSbSymbol symbol = 1;
}

message GetNameResponse {
  string name = 1;
}
